--- a/sis.apartamentos.com.br/src/main/resources/application.properties
+++ b/sis.apartamentos.com.br/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
 
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.resources.add-mappings=false
 
 #È para falhar quando encontrar propridedades desconhecidas?
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.jackson.date-format=dd/MM/yyyy
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
