--- a/sis.apartamentos.com.br/docker-compose.yml
+++ b/sis.apartamentos.com.br/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 
 services:
-   sgdb-postgres-compose:
+  sgdb-postgres-compose:
     image: postgres
     restart: always
     environment:
@@ -15,27 +15,30 @@ services:
     networks:
       - postgres-network
 
-   rabbitmq:
-     image: rabbitmq:3-management-alpine
-     container_name: 'rabbitmq'
-     ports:
-       - 5672:5672
-       - 15672:15672
-     volumes:
-       - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
-       - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
-     networks:
-       - rabbitmq_go_net
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: 'rabbitmq'
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+    networks:
+      - rabbitmq_go_net
 
+  # rabbitmq
+  # usuario: guest
+  # senha: guest
 
-   pgadmin-compose:
+  pgadmin-compose:
     image: dpage/pgadmin4
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
       PGADMIN_DEFAULT_PASSWORD: "admin"
     ports:
-     - "16544:80"
+      - "16544:80"
     networks:
       - postgres-network
 
