--- a/sis.apartamentos.com.br/src/main/resources/application.properties
+++ b/sis.apartamentos.com.br/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:15432/bdapartamento
+spring.datasource.url=jdbc:postgresql://localhost:5432/bdapartamento
 spring.datasource.username=admin
 spring.datasource.password=admin
 server.port=8089
@@ -9,6 +9,9 @@ apartamento.seguranca.enable-https=true
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -38,3 +41,15 @@ rabbitmq.routingkey=APARTAMENTO_EMAIL
 #link api local http://localhost:8089/apartamentosapi/swagger-ui.html#/
 # pg-admin http://localhost:16544/login?next=%2F
 # https://www.base64encode.org/  angular:angular
+
+
+###  Caso queira rodar em desenvolvimento local sem IDE ###
+# 0- dentro da pasta do projeto sis.apartamentos.com.br
+# 1- mvn dependency:resolve
+# 2- mvn dependency:tree
+# 3- mvn package -P desenvolvimento
+# 4- mvn spring-boot:run
+# 5-  mvn package -P desenvolvimento
+
+#  Caso queira rodar em producao o app
+#  mvn clean package -P producao
