--- a/apartamento/src/main/resources/application-dev.properties
+++ b/apartamento/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost:5432}/bdapartamento
-spring.datasource.username=postgres
-spring.datasource.password=v2com@admin
+spring.datasource.username=admin
+spring.datasource.password=admin
 server.port=8089
 
 server.servlet.context-path=/apartamentosapi
