--- a/apartamento/Jenkinsfile
+++ b/apartamento/Jenkinsfile
@@ -6,5 +6,13 @@ pipeline {
                 shell 'mvn clean package -DskipTests=true'
             }
         }
+        stage('Sonnar Analysis') {
+             environment {
+                    scannerHome = tool 'SONAR_SCANNER'
+               }
+                    steps {
+                        shell "${scannerHome}/bin/sonar-scanner -e "
+                    }
+                }
     }
 }
